force-app/main/default/objects/Sales_Region__c/fields/Sales_Region_Code__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region_Code__c</fullName>
    <externalId>true</externalId>
    <label>Sales Region Code</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>