force-app/main/default/objects/Sales_Region__c/fields/Sales_Territory__c.field-meta.xml
<CustomField>
    <fullName>Sales_Territory__c</fullName>
    <label>Sales Territory</label>
    <referenceTo>Sales_Territory__c</referenceTo>
    <relationshipLabel>Sales Regions</relationshipLabel>
    <relationshipName>Sales_Regions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>