force-app/main/default/objects/Sales_Region__c/fields/SR_Operating_Company__c.field-meta.xml
<CustomField>
    <fullName>SR_Operating_Company__c</fullName>
    <label>Operating Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Operating_Companies_List</valueSetName>
    </valueSet>
</CustomField>