force-app/main/default/objects/Sales_Region__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SR_Operating_Company__c</columns>
    <columns>Sales_Territory__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>